Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6986

Child widget of QGraphicsProxyWidget does not get the GraphicsSceneMouseMove event

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.0
    • 4.5.2, 4.5.3, 4.6.0, 4.6.1, 4.6.2
    • Widgets: GraphicsView
    • None
    • fe44e724e7742b17b765fcd6aa9d740e4d8860ba

    Description

      Use main.cpp to reproduce the issue

      Patch suggestion:

      --- a/src/gui/graphicsview/qgraphicsproxywidget.cpp
      +++ b/src/gui/graphicsview/qgraphicsproxywidget.cpp
      @@ -266,8 +266,8 @@ void QGraphicsProxyWidgetPrivate::sendWidgetMouseEvent(QGraphicsSceneMouseEvent
           }
      
           if (!lastWidgetUnderMouse) {
      -        QApplicationPrivate::dispatchEnterLeave(embeddedMouseGrabber ? embeddedMouseGrabber : widget, 0);
      -        lastWidgetUnderMouse = widget;
      +        QApplicationPrivate::dispatchEnterLeave(embeddedMouseGrabber ? embeddedMouseGrabber : receiver, 0);
      +        lastWidgetUnderMouse = receiver;
           }
      

      Attachments

        1. main.cpp
          2 kB
        2. proxy.diff
          3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            menard Alexis Menard (closed Nokia identity) (Inactive)
            sanonymous Nokia Qt Support (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes