Send the hoverLeave not properly sent on the widget inside QGPW.

We need to send the hover leave event on the proper receiver in case
the widget we embed in a complex hierarchy not the widget itself.

Task-number:QTBUG-6986
Reviewed-by:bnilsen